--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_version")
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
