--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        allWarningsAsErrors = false
+        freeCompilerArgs += [
+                '-opt-in=androidx.compose.material3.ExperimentalMaterial3Api',
+                '-opt-in=androidx.compose.material3.windowsizeclass.ExperimentalMaterial3WindowSizeClassApi',
+        ]
     }
     buildFeatures {
         compose true
